# wenet_stt_python

./: .gitignore  .gitmodules  CMakeLists.txt  Justfile  README.md  pyproject.toml  requirements-build.txt  setup.py
.github/workflows/: build.yml
building/: build-wheel-dockcross.sh  dockcross-manylinux2014-x64
native/: wenet_stt_lib.cpp  wenet_stt_lib.h
src/wenet_stt/: __init__.py  __main__.py  utils.py  wrapper.py
tests/: pytest.ini  test_decode.py
wenet_stt/: __init__.py  __main__.py  wrapper.py
